--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: Home
   <a href="https://dsail.kaist.ac.kr/professor/" target="_blank">Prof. Chanyoung Park</a>. 
   
   During my Master's, I was honored with the Best Paper Award at the ICML WCB 2023 and spent wonderful time in Tokyo as a visiting researcher at Tokyo Tech, working with
-  <a href="http://www.net.c.titech.ac.jp/murata.html" target="_blank">Prof. Tsoyoshi Murata</a> and,
+  <a href="http://www.net.c.titech.ac.jp/murata.html" target="_blank">Prof. Tsuyoshi Murata</a> and, 
   <a href="https://staff.aist.go.jp/xin.liu/" target="_blank">Dr. Xin Liu</a>.
 
   
