--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ title: Home
 
   <ul class="tab-nav">
     <li><div class="button active" data-ref="#papers-2024">2024</div></li>
-    <li><div class="button" data-ref="#papers-2023">2023-Pat</div></li>
+    <li><div class="button" data-ref="#papers-2023">2023-Past</div></li>
     <li><div class="button" data-ref="#papers-all">All</div></li>
   </ul>
 
