--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@ title: Home
 <div class="docs-section" id="mentee">
   <h4>Mentee</h4>
   <p>
-  <b>Hongxuan Li</b>  (Duke University), May 2024 -<br>
-  <b>Youran Qu</b> (Peking University), May 2024
+  <b>Hongxuan Li</b>  (Duke University), May 2024 - <br>
+  <b>Youran Qu</b> (Peking University), May 2024 -
   </p> 
 
 </div>
