--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@ title: Home
 <div class="docs-section" id="bio">
   <h4>Bio</h4>
   <p>
-  I am an incoming Ph.D. student in the
+  I am a Ph.D. student in the
   <a href="https://tianlong-chen.github.io/index.html" target="_blank">UNITES Lab</a> at
-  <a href="https://cs.unc.edu/" target="_blank">University of North Carolina, Chapel Hill</a>, advised by
+  <a href="https://cs.unc.edu/" target="_blank">University of North Carolina, Chapel Hill</a>, where I am fortunate to be advised by
   <a href="https://tianlong-chen.github.io/" target="_blank">Prof. Tianlong Chen</a>.
   
   Prior to UNC, I obtained an M.S. in ISysE at 
-  <a href="https://www.kaist.ac.kr/en/" target="_blank">KAIST</a>, where I was fortunate to be advised by 
+  <a href="https://www.kaist.ac.kr/en/" target="_blank">KAIST</a>, advised by 
   <a href="https://dsail.kaist.ac.kr/professor/" target="_blank">Prof. Chanyoung Park</a>. 
   
   During my Master's, I was honored with the Best Paper Award at the ICML WCB 2023 and spent wonderful time in Tokyo as a visiting researcher at Tokyo Tech, working with
@@ -22,7 +22,7 @@ title: Home
   
   <p>
   My current research intersts ile in <b>AI4Science</b> and <b>Efficient ML</b>.
-  Specifically, I am interested in (A) addressing the inductive bias of Graph Neural Networks (<u>GNNs</u>) and Large Language Models (<u>LLMs</u>) with their (B) application in the field of <u>Computational Biology</u>, particularly single-cell RNA sequencing and Tumor Biology.
+  Specifically, I am interested in (A) addressing the inductive bias of Graph Neural Networks (<u>GNNs</u>) and Large Language Models (<u>LLMs</u>) with their (B) application in the field of <u>Computational Biology</u>.
   Additionally, I have recently been focusing on (C) building efficient <u>Sparse Mixture-of-Experts</u> in diverse scientific fields.
   </p> 
 
@@ -224,6 +224,7 @@ title: Home
 <div class="docs-section" id="mentee">
   <h4>Mentee</h4>
   <p>
+  <b>Howard Huang</b>  (UCLA), Aug 2024 - <br>
   <b>Hongxuan Li</b>  (Duke University), May 2024 - <br>
   <b>Youran Qu</b> (Peking University), May 2024 -
   </p> 
