--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@ title: Home
 <div class="docs-section" id="bio">
   <h4>Bio</h4>
   <p>
-  I am a Ph.D. student in the
-  <a href="https://tianlong-chen.github.io/index.html" target="_blank">UNITES Lab</a> at
-  <a href="https://cs.unc.edu/" target="_blank">University of North Carolina, Chapel Hill</a>, where I am fortunate to be advised by
-  <a href="https://tianlong-chen.github.io/" target="_blank">Prof. Tianlong Chen</a>.
+  I am a Ph.D. student in the 
+  <a href="https://sph.unc.edu/envr/environmental-sciences-and-engineering-home/" target="_blank">Department of Environmental Sciences and Engineering (ESE)</a> at the University of North Carolina Gillings School of Global Public Health, where I am advised by
+  <a href="https://scholar.google.com/citations?user=XCUo8NsAAAAJ&hl=en" target="_blank">Prof. Barbara Turpin</a>.
   
-  Prior to UNC, I obtained an M.S. in ISysE at 
-  <a href="https://www.kaist.ac.kr/en/" target="_blank">KAIST</a>, advised by 
-  <a href="https://dsail.kaist.ac.kr/professor/" target="_blank">Prof. Chanyoung Park</a>. 
+  Prior to UNC, I obtained my M.S. and B.S. at the
+  <a href="https://www.korea.ac.kr/mbshome/mbs/university/index.do" target="_blank">Korea University</a>, advised by 
+  <a href="https://eco.korea.ac.kr/EnvChem" target="_blank">Prof. Jung-Hwan Kwon</a>. 
   
   During my Master's, I was honored with the Best Paper Award at the ICML WCB 2023 and spent wonderful time in Tokyo as a visiting researcher at Tokyo Tech, working with
   <a href="http://www.net.c.titech.ac.jp/murata.html" target="_blank">Prof. Tsuyoshi Murata</a> and, 
@@ -54,7 +53,7 @@ title: Home
 </div> -->
 
 <!-- ========== NEWS ========== -->
-<div class="docs-section" id="news">
+<!-- <div class="docs-section" id="news">
   <h4>News</h4>
 
   <ul class="tab-nav">
@@ -89,7 +88,7 @@ title: Home
     </div>
 
   </div>
-</div>
+</div> -->
 
 <!-- ========== PUBLICATIONS ========== -->
 <div class="docs-section" id="publications">
@@ -100,8 +99,8 @@ title: Home
   </p>
 
   <ul class="tab-nav">
-    <li><div class="button active" data-ref="#papers-2024">2024</div></li>
-    <li><div class="button" data-ref="#papers-2023">2023-Past</div></li>
+    <!-- <li><div class="button active" data-ref="#papers-2024">2024</div></li> -->
+    <!-- <li><div class="button" data-ref="#papers-2023">2023-Past</div></li> -->
     <li><div class="button" data-ref="#papers-all">All</div></li>
   </ul>
 
@@ -220,7 +219,7 @@ title: Home
   </div>
 </div>
 
-<!-- ========== Mentee ========== -->
+<!-- ========== Mentee ==========
 <div class="docs-section" id="mentee">
   <h4>Mentee</h4>
   <p>
@@ -229,7 +228,7 @@ title: Home
   <b>Youran Qu</b> (Peking University), May 2024 -
   </p> 
 
-</div>
+</div> -->
 
 
 <!-- ========== RESUME ========== -->
