--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Home
   <a href="https://scholar.google.com/citations?user=XCUo8NsAAAAJ&hl=en" target="_blank">Prof. Barbara Turpin</a>.
   
   Before joining the Ph.D. program, I obtained my M.S. and B.S. at the
-  <a href="https://www.korea.ac.kr/mbshome/mbs/university/index.do" target="_blank">Korea University</a>, advised by 
+  <a href="https://www.korea.edu/mbshome/mbs/en/index.do" target="_blank">Korea University</a>, advised by 
   <a href="https://eco.korea.ac.kr/professor-main-menu/professor-detail?id=53" target="_blank">Prof. Jung-Hwan Kwon</a>. 
   
   During my Master's, I studied on the fate of hazardous chemicals in the environment, and I interned at the Korea Testing Laboratory (KTL), where I analyzed environmental pollutants.
