--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ title: Home
   <a href="https://www.korea.edu/mbshome/mbs/en/index.do" target="_blank">Korea University</a>, advised by 
   <a href="https://eco.korea.ac.kr/professor-main-menu/professor-detail?id=53" target="_blank">Prof. Jung-Hwan Kwon</a>. 
   
-  During my Master's, I studied on the fate of hazardous chemicals in the environment, and I interned at the Korea Testing Laboratory (KTL), where I analyzed environmental pollutants.
-  After graduating, I conducted research at Samsung Electronics EHS/Infra Technology Research Center.
+  During my Master's program, I studied on the fate of hazardous chemicals in the environment, and I interned at the Korea Testing Laboratory (KTL), where I analyzed environmental pollutants.
+  Following master's degree, I conducted research at Samsung Electronics EHS/Infra Technology Research Center, focusing on the chemical supply system.
   <!-- <a href="http://www.net.c.titech.ac.jp/murata.html" target="_blank">Prof. Tsuyoshi Murata</a> and, 
   <a href="https://staff.aist.go.jp/xin.liu/" target="_blank">Dr. Xin Liu</a>. -->
 
