paper add icims

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: Home
 
   
   <p>
-  My current research focuses on the <b>sampling </b> and <b>analysis</b> of <b>PFAS</b> in the atmosphere, with the goal of evaluating the fate of PFAS in the air.
+    My current research explores the sampling and analysis of <b>PFAS</b> in the atmosphere, with a specific focus on understanding their environmental behavior. This includes examining how PFAS are emitted and transported in ambient air. I am particularly interested in quantifying <b>emission rates</b> from a range of consumer and industrial products, as this information is essential for identifying major sources and assessing potential human exposure risks.
   </p> 
 
 </div>
